# ikfastpy

./: README.md  demo.py  ikfast61.cpp  ikfast61_dae.cpp  ikfastpy.cpp  rodrigues.py  ur5.robot.xml  ur5e.robot.xml
cpp-version/: 0.752344, -2.13263, 2.14242, 0.459845, 0  CMakeLists.txt  README.md  calculate_kinematics.cpp  demo.cpp  demo.py  ikfast61.cpp  ikfast_wrapper.cpp  ikfast_wrapper.h  int main(int argc, char** argv).cpp  rodrigues.py
dae_files/: ikfast61_panda.cpp  ikfast61_ur5e.cpp  ur5e.urdf  ur5e.xml  ur5e_robot.urdf  xacro2dae.sh
dae_files/example/: irb6600_with_linear_track_workspace.dae
rtde_tests/: CMakeLists.txt  rtde_test  rtde_test.cpp
rtde_tests/tests/: notes  test1.txt  test2.txt  test3.txt
